--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,7 @@
     
     <ul>
         <li><a href="dino.html">Dino</a></li>
+        <li><a href="umaq.html">Umaq</a></li>
     </ul>
     
 </body>
