do some changes

--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,17 @@
 <html>
-<head></head>
+<head>
+<style>
+p{
+  border: 1px solid #ccc;
+  background-color: #fffccc;
+  font-size: 14px;
+  text-align: center;
+  width: 300px;   	
+}
+</style>
+</head>
 <body>
-Helloo there
+<h1>Repo Repo Repo</h1>
+<p>Versioning your files to make your life easy</p>
 </body>
 </html>
