tambah ckit jer

--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     
     <ul>
         <li><a href="dino.html">Dino</a></li>
-        <li><a href="umaq.html">Umaq</a></li>
+        <li><a href="umaq.html">Umaq Git</a></li>
     </ul>
     
 </body>
