--- a/nordiana.html
+++ b/nordiana.html
@@ -15,6 +15,10 @@
     <td>Asal</td>
     <td>Sarawak</td>
   </tr>
+     <tr>
+    <td>Email</td>
+    <td>polaris1517@gmail.com</td>
+  </tr>
 </table>
 <p>&nbsp;</p>
 </body>
