Diana edit skit

--- a/nordiana.html
+++ b/nordiana.html
@@ -9,16 +9,21 @@
 <table width="500" border="1" cellspacing="0" cellpadding="1">
   <tr>
     <td>Nama</td>
-    <td>Nordiana</td>
+    <td>Nordiana binti Daud</td>
   </tr>
-   <tr>
-    <td>Asal</td>
-    <td>Sarawak</td>
-  </tr>
-     <tr>
+    <tr>
     <td>Email</td>
     <td>polaris1517@gmail.com</td>
   </tr>
+   <tr>
+    <td>Alamat</td>
+    <td>Kuching, Sarawak</td>
+  </tr>
+     <tr>
+    <td>Sekarang</td>
+    <td>Belajar GIT Now :D</td>
+  </tr>
+    
 </table>
 <p>&nbsp;</p>
 </body>
