--- a/nordiana.html
+++ b/nordiana.html
@@ -24,6 +24,12 @@
     <td>Belajar GIT Now :D</td>
   </tr>
     
+    </tr>
+     <tr>
+    <td>Klik</td>
+    <td><a href="nordiana.html"></a></td>
+  </tr>
+    
 </table>
 <p>&nbsp;</p>
 </body>
