ada tmbhan terbaru

--- a/faizalbahasan.html
+++ b/faizalbahasan.html
@@ -8,7 +8,11 @@
 
 <h1>faizalbahasan</h1>
 
-<h4><strong>testing push</strong></h4>
+<ul>
+    <li><a href="href= menu.html"></a></li>
+</ul>
+
+<h4><strong>terbaik</strong></h4>
 
 <body>
 
