--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
     <h1>Peserta JOMWEB Git</h1>
     
     <ul>
-        <li><a href="dino.html">Dino</a></li>
+        <li><a href="amin.html">Dino</a></li>
     </ul>
     
 </body>
