--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,8 @@
     <h1>Peserta JOMWEB Git</h1>
     
     <ul>
-        <li><a href="dino.html">Dino</a></li>
+        <li><a href="dino.html">Dino</a></li> 
+        <li><a href="zaid.html">Zaid</a></li>
     </ul>
     
 </body>
