--- a/faizalbahasan.html
+++ b/faizalbahasan.html
@@ -9,7 +9,7 @@
 <h1>faizalbahasan</h1>
 
 <ul>
-    <li><a href="menu.html"></a></li>
+    <li><a href="dino.html"></a></li>
 </ul>
 
 <h4><strong>terbaik</strong></h4>
