--- a/menu.html
+++ b/menu.html
@@ -12,6 +12,10 @@
     <ul>
         <li><a href="dino.html">Dino</a></li>
     </ul>
-    
+
+    <ul>
+        <li><a href="faizalbahasan.html">faizal</a></li>
+    </ul>
+
 </body>
 </html>
