--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     
     <ul>
         <li><a href="dino.html">Dino</a></li>
-		<li><a href="Tanjung.html">Dino</a></li>
+		<li><a href="Tanjung.html">Tanjung</a></li>
     </ul>
     
 </body>
