--- a/menu.html
+++ b/menu.html
@@ -22,6 +22,7 @@
         <li><a href="acfatah.html">Fatah</a></li>
     
         <li><a href="amaleena.html">Amaleena</a></li>
+        <li><a href="nordiana.html">Nordiana</a></li>
     </ul>
 
 </body>
