--- a/faizalbahasan.html
+++ b/faizalbahasan.html
@@ -6,10 +6,12 @@
   <title>Start baru</title>
 </head>
 
-<h1>faizalbahasan</h1>
+<h4>faizalbahasan</h4>
 
 <ul>
-    <li><a href="dino.html"></a></li>
+    <li><a href="faizalbahasan.html">testing</a></li>
+    <li><a href="lagi.html">lagi</a></li>
+    <li><a href="lagi.html">lagi2</a></li>
 </ul>
 
 <h4><strong>terbaik</strong></h4>
