--- a/wira.html
+++ b/wira.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-       <h1>It's time to push again!!</h1>
+       <h1>This time using GitHUb</h1>
 
     </body>
 </html>
