--- a/Tanjung.html
+++ b/Tanjung.html
@@ -3,17 +3,8 @@
 <title>	</title>
 </head>
 <body> 
-<h1> NAMA : MUHAMMAD TANJUNG BIN SYAHRIL </h1>
-<h1> UMUR : 20 </h1>
-<h1> TARIKH LAHIR : 09/12/1994 </h1>
-<h1> STATUS : BUJANG </h1>
-<h1> PENGAJIAN : POLITEKNIK SULTAN IDRIS SHAH </h1>
-<h1> KURSUS : TEKNOLOGI MALUMAT DAN KOMUNIKASI ( PENGATURCARAAN ) </h1>
-<h1> SEMESTER : 4 </h1>
+<h1> I'M TANJUNG :D </h1>
 
-<h1> TAHUN : 2 </h1>
-
-<h1> TAHUN : 2 llllllllllllllllllllllllllllllllllllllllll</h1>
 
 </body>
 </html>
