--- a/nordiana.html
+++ b/nordiana.html
@@ -27,7 +27,7 @@
     </tr>
      <tr>
     <td>Klik</td>
-    <td><a href="nordiana.html"></a></td>
+    <td><a href="nordiana.html">KLIK</a></td>
   </tr>
     
 </table>
