Add Haslinda Rasip and Aidiel Effendy Naqisma Ismail to Bengkel GIT JOMWEB bersama NEF

--- a/20150808-nef.html
+++ b/20150808-nef.html
@@ -91,6 +91,8 @@
                     
                     TAMBAHKAN NAMA ANDA DENGAN PAUTAN KE AKAUN GITHUB ANDA
                     -->
+                    <li><a href="https://github.com/aidiel">Aidiel Effendy Naqisma Ismail</a></li>
+                    <li><a href="https://github.com/elinda35">Haslinda Rasip</a></li>
                 </ul>
             </div>
             
