Add "abdul khaliq" into peserta

--- a/20150808-nef.html
+++ b/20150808-nef.html
@@ -93,6 +93,7 @@
                     -->
                     <li><a href="https://github.com/aidiel">Aidiel Effendy Naqisma Ismail</a></li>
                     <li><a href="https://github.com/elinda35">Haslinda Rasip</a></li>
+                    <li><a href="https://github.com/khaliqqq">Abdul Khaliq Bin Abd Halid</a></li>
                 </ul>
             </div>
             
