--- a/20150808-nef.html
+++ b/20150808-nef.html
@@ -95,6 +95,7 @@
                     <li><a href="https://github.com/elinda35">Haslinda Rasip</a></li>
                     <li><a href="https://github.com/khaliqqq">Abdul Khaliq Bin Abd Halid</a></li>
                     <li><a href="https://github.com/rainprecious">Halim Kassim</a></li>
+					<li><a href="https://github.com/pisyek">M Hafiz Suhaimi</a></li>
                 </ul>
             </div>
             
