add my github link

--- a/20150808-nef.html
+++ b/20150808-nef.html
@@ -96,6 +96,7 @@
                     <li><a href="https://github.com/khaliqqq">Abdul Khaliq Bin Abd Halid</a></li>
                     <li><a href="https://github.com/rainprecious">Halim Kassim</a></li>
 					<li><a href="https://github.com/pisyek">M Hafiz Suhaimi</a></li>
+					<li><a href="https://github.com/firdaus2295">Mohamad Firdaus</a></li>
                 </ul>
             </div>
             
