add Hilmi Hakim

--- a/20150808-nef.html
+++ b/20150808-nef.html
@@ -80,6 +80,9 @@
                     <li>
                         <a href="https://github.com/azraai" target="_blank">Ariff Azraai</a>
                     </li>
+                    <li>
+                        <a href="https://github.com/hilmihakim" target="_blank">Hilmi Hakim</a>
+                    </li>
                 </ul>
 
                 <h1 class="page-header">Peserta
